--- a/index.html
+++ b/index.html
@@ -294,7 +294,6 @@
             "Lakes_grampanchyat.geojson": 'Village geojsons/Lakes_grampanchyat.geojson',
             "Landfill.geojson": 'Village geojsons/Landfill.geojson',
             "New Track for Adigarakallahalli.geojson": 'Village geojsons/New Track for Adigarakallahalli.geojson',
-            "New_adhalli_tractor_route.geojson": 'Village geojsons/New_adhalli_tractor_route.geojson',
             "old_adhallitractor_route.geojson": 'Village geojsons/old_adhallitractor_route.geojson',
             "Old_buragunte_billapura_route.geojson": 'Village geojsons/Old_buragunte_billapura_route.geojson'
         };
@@ -309,21 +308,19 @@
                 style: function (feature) {
                     switch (fileName) {
                         case 'gp.geojson':
-                            return { color: 'brown', weight: 2, opacity: 0.9, fillOpacity: 0 };
+                            return { color: 'brown', weight: 2, opacity: 0.5, fillOpacity: 0 };
                         case 'Kaluves_lake.geojson':
-                            return { color: 'darkblue', weight: 2, opacity: 0.9 };
+                            return { color: 'darkblue', weight: 1, opacity: 0.4 };
                         case 'Lakes_grampanchyat.geojson':
-                            return { color: 'lightblue', weight: 2, opacity: 0.9, fillColor: 'blue', fillOpacity: 0.5 };
+                            return { color: 'lightblue', weight: 2, opacity: 0.7, fillColor: 'blue', fillOpacity: 0.7 };
                         case 'Landfill.geojson':
-                            return { color: 'red', weight: 2, opacity: 0.9, fillColor: 'red', fillOpacity: 0.9 };
+                            return { color: 'red', weight: 2, opacity: 0.6, fillColor: 'red', fillOpacity: 0.6 };
                         case 'New Track for Adigarakallahalli.geojson':
-                            return { color: 'pink', weight: 2, opacity: 0.9 };
-                        case 'New_adhalli_tractor_route.geojson':
-                            return { color: 'pink', weight: 2, opacity: 0.9 };
+                            return { color: 'pink', weight: 3, opacity: 0.6 };
                         case 'old_adhallitractor_route.geojson':
-                            return { color: 'orange', weight: 2, opacity: 0.9 };
+                            return { color: 'orange', weight: 3, opacity: 0.6 };
                         case 'Old_buragunte_billapura_route.geojson':
-                            return { color: 'orange', weight: 2, opacity: 0.9 };
+                            return { color: 'orange', weight: 3, opacity: 0.6 };
                         default:
                             return { color: 'black', weight: 2, opacity: 0.9 }; // Default style if no match is found
                     }
@@ -347,7 +344,6 @@
             "Lakes Grampanchyat": geojsonLayers['Lakes_grampanchyat.geojson'],
             "Landfill": geojsonLayers['Landfill.geojson'],
             "Adigarakallahalli Track": geojsonLayers['New Track for Adigarakallahalli.geojson'],
-            "New Adhalli Tractor Route": geojsonLayers['New_adhalli_tractor_route.geojson'],
             "Old Adhalli Billapura Tractor Route": geojsonLayers['old_adhallitractor_route.geojson'],
             "Old Buragunte Route": geojsonLayers['Old_buragunte_billapura_route.geojson']
         };
@@ -366,10 +362,10 @@
                         let color;
                         switch (feature.properties['Type of Waste Generator']) {
                             case 'Household':
-                                color = 'blue';
+                                color = 'green';
                                 break;
                             case 'University/College/School/Anganwadi':
-                                color = 'green';
+                                color = 'blue';
                                 break;
                             case 'Shop (Permanent Structure)':
                                 color = 'red';
@@ -395,12 +391,12 @@
 
                         // Create a circle marker instead of an icon
                         return L.circleMarker(latlng, {
-                            radius: 5, // Adjust the size of the circle
+                            radius: 3, // Adjust the size of the circle
                             fillColor: color,
                             color: color, // Outline color (same as fill in this case)
                             weight: 1, // Border thickness
-                            opacity: 1,
-                            fillOpacity: 0.8 // Transparency of the fill
+                            opacity: 0.6,
+                            fillOpacity: 0.6 // Transparency of the fill
                         });
                     },
                     onEachFeature: function (feature, layer) {
@@ -487,6 +483,37 @@
             filterMarkers();
         }
 
+        // Load the Black Spots GeoJSON file
+        fetch('blackspots.geojson')
+            .then(response => response.json())
+            .then(data => {
+                L.geoJSON(data, {
+                    onEachFeature: function (feature, layer) {
+                        // Ensure the 'image' property exists and is not empty
+                        if (feature.properties && feature.properties.Image && feature.properties.Image.trim() !== '') {
+                            // Create a popup with the "View Image" link
+                            let popupContent = `<b>Black Spot</b><br>
+                            <a href="${feature.properties.Image}" target="_blank">View Image</a>`;
+                            layer.bindPopup(popupContent);
+                        } else {
+                            // If no image property, show a default message
+                            layer.bindPopup('No image available for this location.');
+                        }
+                    },
+                    pointToLayer: function (feature, latlng) {
+                        // Display points as small circles
+                        return L.circleMarker(latlng, {
+                            radius: 4,
+                            fillColor: 'black',
+                            color: 'black',
+                            weight: 1,
+                            opacity: 1,
+                            fillOpacity: 0.8
+                        });
+                    }
+                }).addTo(map);
+            })
+            .catch(error => console.error('Error loading the GeoJSON:', error));
 
         // Filter markers based on the selected filters
         function filterMarkers() {
